19 June 2008
+ Removed unsigned integers from update.php
+ Media resizing is working properly again.
+ Added a setRequired to Image title.
+ Changed youtube import to work properly with XMLParser fixes.
+ Fixed bad tag in document list view
+ Updated: templates/file_list.tpl

13 June 2008
+ Replaced next and previous picture links with png arrows
+ Added a warning message if a folder is made private after a folder
  slideshow is created.
+ application/msword loads the document.png now instead of the
  text.png
+ Move the jcaro javascript into its own function so it could be
  called by the update script in File Manager.
+ Removed width from the horizontal carousel
+ Updated: conf/icons.php, javascript/update_file/head.js,
  templates/carousel_horz.tpl, templates/carousel_vert.tpl,
  templates/ss_box.tpl, templates/style.css

11 June 2008
+ Can now set thumbnail dimensions from settings
+ All thumbnail setting are derived from settings page
+ Viewing images in a folder can now be viewed using jcarousel lite.
+ Added settings to control jcarousel lite
+ Adding dimensions to thumbnails
+ Updated: javascript/jcaro_lite/*
           javascript/shutter/*
           templates/carousel_horz.tpl,
           templates/carousel_vert.tpl, templates/settings.tpl,
           templates/style.css

Version 2.1.0
---------------------------------------------------------------------------------
5 June 2008
+ Added fourth parameter to importPost : file_prefix. Prefixes the
  saved file with submitted characters.

3 June 2008
+ Added conditional to prevent similiar resize from overwriting one
  another.
+ Added new menu to pick resize method on image.
+ File_Assoc class now tracks width, height, and cropped status.
+ Updated: javascript/pick_file/head.js,
           javascript/pick_file/scripts.js,
           templates/style.css,
           templates/file_manager/folder_content_view.tpl,
           templates/file_manager/resize.tpl

30 May 2008
+ Error check added to resize function.