@@ -1,3 +1,7 @@
+20 June 2008
++ Not making image title required
++ Made placeholder image clickable.
+
 19 June 2008
 + Removed unsigned integers from update.php
 + Media resizing is working properly again.
